# TicketSystem-ACM-2025Spring

./: .gitignore  33.in  34.in  35.in  36.in  37.in  63.in  64.in  65.in  66.in  67.in  68.in  69.in  70.in  71.in  CMakeLists.txt  README.md  code  delete.sh  error_log.txt  has_opened  hashdata  large_files.txt  order_data_2  order_disk_1  order_disk_2  release_disk  routeB_disk  state_disk  user_info_data
1867/: code  config.gen.js  config.in.yml  config.json.old
backend/: CMakeLists.txt  code
backend/ioput/: handler.cpp  handler.hpp
backend/main/: ioput.cpp
backend/src/index/: b_plus_tree.hpp  b_plus_tree_page.hpp  iterator.hpp
backend/src/item/: user.hpp
backend/src/mySTL/: fix_string.hpp
backend/src/storage/: config.hpp  disk_manager.hpp  frame_manager.hpp
backend/src/system/: core_system.cpp  train_system.cpp  train_system.hpp  user_system.cpp  user_system.hpp
frontend/: backup.html  html.backup
main/: ioput.cpp
src/: b_plus_tree_page.hpp  bpm_test  bpm_test.cpp  buffer_pool_manager.hpp  disk_manager.hpp  frame_manager.hpp
src/I/O/: commandparser.cpp  commandparser.hpp  tokenscanner.cpp  tokenscanner.hpp
src/IO/: commandparser.cpp  commandparser.hpp  tokenscanner.cpp
src/include/IO/: tokenscanner.hpp
src/include/system/: core_system.hpp
src/index/: b_plus_tree.hpp  b_plus_tree_page.hpp  iterator.hpp
src/item/: train.cpp  train.hpp  user.cpp  user.hpp
src/key_hash/: hash.hpp
src/mySTL/: fix_string.hpp  set.hpp  vector.hpp
src/storage/: buffer_pool_manager.hpp  config.hpp  disk_manager.hpp  frame_manager.hpp
src/system/: core_system.cpp  core_system.hpp  train_system.cpp  train_system.hpp  user_system.cpp  user_system.hpp
test/: answer  answer.cpp  bpm_test.cpp  input.txt  output.txt
testcase/: 2.txt  code  config.json
testcases/: code  ticket.sum
